--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -21,6 +21,17 @@ jobs:
       - name: create builds
         run: yarn build
 
+      - name: copy build to app
+        run: cp -r dist/* app
+
+      - name: GH Pages Deployment
+        uses: JamesIves/github-pages-deploy-action@4.1.3
+        # if: ${{ github.ref == 'refs/heads/master'}}
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: ./app
+          clean: true # Automatically remove deleted files from the deploy branch
+
       - name: Publish to NPM
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         run: npm publish || true
