cd: add scripts for building app

--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@surma/rollup-plugin-off-main-thread": "^2.2.3",
+    "gh-pages": "^3.2.3",
     "rollup": "^1.29.0"
   },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "npm run build",
+    "clean": "rm -rd dist/*",
+    "predeploy": "yarn clean && yarn build && cp -r dist/* app",
+    "deploy": "gh-pages -d app"
   },
   "files": [
     "dist"
