--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: GH Pages Deployment
         uses: JamesIves/github-pages-deploy-action@4.1.3
-        # if: ${{ github.ref == 'refs/heads/master'}}
+        if: ${{ github.ref == 'refs/heads/master'}}
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: ./app
